# justwatch_letterboxd

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
.cache/: movies.db  test_movies.db
docs/: API_FINDINGS.md
src/: __init__.py  cache.py  matcher.py
src/catalog/: __init__.py  manager.py  scheduler.py
src/cli/: __init__.py
src/justwatch/: __init__.py  client.py
src/letterboxd/: __init__.py  client.py
src/scrapers/: __init__.py  justwatch_netflix.py
src/web/: __init__.py  app.py
src/web/static/: app.js  style.css
src/web/templates/: index.html
tests/: __init__.py  inspect_justwatch_html.py  inspect_pagination.py  test_cache.py  test_catalog_manager.py  test_integration.py  test_justwatch.py  test_justwatch_api.py  test_justwatch_client.py  test_letterboxd.py  test_letterboxd_client.py  test_matcher.py  test_netflix_pagination.py  test_web_api.py
