[project]
name = "justwatch-letterboxd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "letterboxdpy>=5.3.7",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "simple-justwatch-python-api>=0.16",
    "uvicorn>=0.40.0",
]
